# katas

./: .gitignore  .travis.yml  README.md
RefactoringBadCode/: build.gradle  settings.gradle
bank-data/: README.md  pom.xml
bowling-game/java/: README.md  pom.xml
bowling-game/python/: README.md  requirements.txt
coffee-machine/: README.md  pom.xml
corporate-hotel-booking-kata/: README.md  pom.xml
dni/: README.md  pom.xml
fizzbuzz/: README.md  pom.xml
fizzbuzz/java/: README.md  pom.xml
fizzbuzz/python/: README.md  fizzbuzz.py  fizzbuzz_spec.py  main.py  requirements-dev.txt  requirements.txt  setup-fizzbuzz-dependencies.sh  test_fizzbuzz.py
gilded-rose/: README.md  pom.xml
hotjar/: test_int_array_1_3_4_sequence_detector.py  test_int_array_sequence_detector.py  test_int_array_sequence_detector_v2.py
kata-templates/: README.md
kata-templates/java14-maven-template/: README.md  pom.xml
kata-templates/java8-gradle-junit5-template/: .gitignore
kata-templates/python/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
kata-templates/python/kata_name/: __init__.py
kata-templates/python/src/: foo.py
kata-templates/python/tests/: test_foo.py
parallel-change-kata/: README.md
poker-hands/: README.md  pom.xml
potter-kata/: README.md  pom.xml
roman-numerals/: README.md
roman-numerals/ruby/: README.md
spotify-labs/: README.md  binary-number-mirroring.py  cat_vs_dog.py  requirements-dev.txt  zipf_law_song.py
string-calculator/: README.md
trip-service-kata/: pom.xml
yatzy-refactoring-kata/: README.md  pom.xml
(+187 files in other folders)
