[tool.poetry]
name = "python-kata-name"
version = "0.1.0"
description = "This repository is a Python template project for any kata"
authors = ["Isidro Lopez <islomar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8"
yapf = "^0.40.1"
ruff = "^0.0.280"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-xdist = "^3.3.1"
doublex = "^1.9.6.1"
expects = "^0.9.0"
doublex-expects = "^0.7.1"
black = "^24.2.0"
coverage = "^7.4.1"

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
